added background css color

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HandyMia</title>
   <!--  <link rel="stylesheet" href="css/normalize.css">-->
+  <link rel="stylesheet" href="css/styles.css">
   <meta name="theme-color" content="#fafafa">
 </head>
-<body>
+<body class="loading">
   <div>
     <a href="#default"><img src="images/handymia.jpg" alt="Handymia" width="100" height="100"></a>
     <div>
