--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             </strong></li>
           </ol>
           <figure>
-            <img src="images/pergola-main_r.jpg" alt="Subject to 123RF.com terms non-exclusive, royalty-free, worldwide, perpetual, non-transferable sub-license to use, Reproduce, modify, publish and display" />
+            <img src="images/pergola-main_r.jpg" width="427" height="281"
+                 alt="Subject to 123RF.com terms non-exclusive, royalty-free, worldwide, perpetual, non-transferable sub-license to use, Reproduce, modify, publish and display" />
             <figcaption><a href="https://www.popularmechanics.com/home/how-to-plans/how-to/a760/how-to-build-a-pergola-plans">
               How to Build a Pergola Right in your Backyard
             </a></figcaption>
@@ -112,7 +113,7 @@
             </strong></li>
           </ol>
           <figure>
-            <video width="320" height="240" controls><source src="video/mount_tv.mp4" type="video/mp4"/>/video>
+            <video width="420" height="280" controls><source src="video/mount_tv.mp4" type="video/mp4"/>/video>
             <figcaption><a href="https://www.homedepot.com/c/ah/how-to-mount-a-flat-screen-tv/9ba683603be9fa5395fab902b628783">
               How to Mount a tv on the wall
             </a></figcaption>
@@ -123,7 +124,8 @@
            <h1><strong>If you're looking for safe, reliable and professional light fixture installation help.</strong></h1>
            <p><strong>HandyMia can connect you with the right electrician for you.</strong></p>
            <figure>
-             <img src="images/lightfixtures.jpg" alt="Subject to 123RF.com terms non-exclusive, royalty-free, worldwide, perpetual, non-transferable sub-license to use, Reproduce, modify, publish and display" />
+             <img src="images/lightfixtures.jpg" width="150" height="200"
+                  alt="Subject to 123RF.com terms non-exclusive, royalty-free, worldwide, perpetual, non-transferable sub-license to use, Reproduce, modify, publish and display" />
              <figcaption><a href="https://https://www.homedepot.com/c/ah/how-to-install-a-light-fixture/9ba683603be9fa5395fab90eec2fb1f">Light Fixtures and Ceiling Fans</a></figcaption>
            </figure>
         </section>
