--- a/index.html
+++ b/index.html
@@ -75,19 +75,28 @@
 				</section>
         <section>
           <a id="pergola"></a>
-          <h1><strong>A pergola is a structure that won't provide shelter from wind or rain,
-            and is only marginally better when it comes to the midday sun. So, why build it?</strong></h1>
-          <ol>
-            <li><strong>Because in the absence of walls and a roof, a pergola defines an outdoor space without constraining it.
-            It's a unique architectural blend that places you both inside and out at the same time.
+          <h1><strong>A pergola is a structure that won't provide shelter from wind or rain</strong></h1>
+          <p><strong>And is only marginally better when it comes to the midday sun. So, why build it?</strong></p>
+          <ul>
+            <li><strong>
+              Because in the absence of walls and a roof, a pergola defines an outdoor space without constraining it.
             </strong></li>
-            <li><strong>It's just the thing to bring backyard landscaping to life.
-            Pergolas were common features of Italian Renaissance gardens, often covering walkways or serving as grape arbors.
+            <li><strong>
+              It's a unique architectural blend that places you both inside and out at the same time.
             </strong></li>
-            <li><strong>  Today, the same design can be used to define a passageway or frame a focal point in your yard.
-            Add a climbing plant such as wisteria or, yes, grapevines, and your pergola will provide color and shade as well.
+            <li><strong>
+              It's just the thing to bring backyard landscaping to life.
             </strong></li>
-          </ol>
+            <li><strong>
+              Pergolas were common features of Italian Renaissance gardens, often covering walkways or serving as grape arbors.
+            </strong></li>
+            <li><strong>
+              Today, the same design can be used to define a passageway or frame a focal point in your yard.
+            </strong></li>
+            <li><strong>
+              Add a climbing plant such as wisteria or, yes, grapevines, and your pergola will provide color and shade as well.
+            </strong></li>
+          </ul>
           <figure>
             <img src="images/pergola-main_r.jpg" width="427" height="281"
                  alt="Subject to 123RF.com terms non-exclusive, royalty-free, worldwide, perpetual, non-transferable sub-license to use, Reproduce, modify, publish and display" />
@@ -98,9 +107,9 @@
         </section>
         <section>
            <a id="tv-mount"></a>
-          <h1><strong>
-            Mounting a tv on the wall, Save floor space and create an elegant look in your home when you install a TV wall mount.
-          </strong></h1>
+          <h1><strong>Mounting a tv on the wall</strong></h1>
+          <p><strong>Save floor space and create an elegant look in your home when you install a TV wall mount.
+          </strong></p>
           <ol>
             <li><strong>
               This will elevate your TV so there’s not a bad seat in the house.
@@ -121,7 +130,8 @@
         </section>
         <section>
            <a id="light"></a>
-           <h1><strong>If you're looking for safe, reliable and professional light fixture installation help.</strong></h1>
+           <h1><strong>If you're looking for:</strong></h1>
+           <p><strong>safe, reliable and professional light fixture installation help.</strong></p>
            <p><strong>HandyMia can connect you with the right electrician for you.</strong></p>
            <figure>
              <img src="images/lightfixtures.jpg" width="150" height="200"
